--- a/contact/templates/contact.html
+++ b/contact/templates/contact.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="robots" content="index, follow" />
-    <title>Mioca - Handmade Goods eCommerce HTML Template</title>
+    <title>Contact Us</title>
     <meta name="description" content="Mioca - Handmade Goods eCommerce HTML Template" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
@@ -59,7 +59,7 @@
                                 </div>
                                 <div class="info-box">
                                     <h5 class="title">Phone:</h5>
-                                    <p><a href="tel:0123456789">012 345 67 89</a></p>
+                                    <p><a href="tel:+380505033757">+380505033757</a></p>
                                 </div>
                             </div>
                             <div class="single-contact">
@@ -68,7 +68,7 @@
                                 </div>
                                 <div class="info-box">
                                     <h5 class="title">Email:</h5>
-                                    <p><a href="mailto:demo@example.com">demo@example.com</a></p>
+                                    <p><a href="mailto:demo@example.com">mioca_shop@gmail.com</a></p>
                                 </div>
                             </div>
                             <div class="single-contact">
@@ -77,29 +77,44 @@
                                 </div>
                                 <div class="info-box">
                                     <h5 class="title">Address:</h5>
-                                    <p>Your address goes here</p>
+                                    <p>370 7TH NEW YORK NY 10001-0041 USA</p>
                                 </div>
                             </div>
                         </div>
                     </div>
-
-                    <!-- Contact Form Section -->
                     <div class="col-lg-7">
                         <div class="contact-form">
-                            <h2 class="title">Leave a Message</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-
-                            <form method="post" action="{% url 'contact' %}">
+                            <div class="contact-title mb-30">
+                                <h2 class="title" data-aos="fade-up" data-aos-delay="200">Leave a Message</h2>
+                                <p>And we will answer to whatever question you have about our product.</p>
+                            </div>
+                            <form class="contact-form-style" id="contact-form" action="{% url 'contact' %}" method="post">
                                 {% csrf_token %}
-                                {{ form.as_p }}
-                                <button class="btn btn-primary mt-4" type="submit">Send Message</button>
+                                <div class="row">
+                                    <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+                                        {{ form.name }}
+                                    </div>
+                                    <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+                                        {{ form.email }}
+                                    </div>
+                                    <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+                                        {{ form.subject }}
+                                    </div>
+                                    <div class="col-lg-12" data-aos="fade-up" data-aos-delay="200">
+                                        {{ form.message }}
+                                        <button class="btn btn-primary mt-4" data-aos="fade-up" data-aos-delay="200" type="submit">Send Message</button>
+                                    </div>
+                                </div>
                             </form>
+                            <p class="form-messege"></p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <!-- Contact Area End -->
 
     {% include 'includes/footer.html' %}
 
