--- a/blog/templates/blog-search.html
+++ b/blog/templates/blog-search.html
@@ -57,7 +57,7 @@
                                         <h5 class="blog-heading">
                                             <a class="blog-heading-link" href="{% url 'blog_detail' blog.id %}">{{ blog.title }}</a>
                                         </h5>
-                                        <p>{{ blog.description }}</p>
+                                        <p>{{ blog.blog_text_2 }}</p>
                                         <a href="{% url 'blog_detail' blog.id %}" class="btn btn-primary blog-btn"> Read More</a>
                                     </div>
                                 </div>
