--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -1,140 +1,118 @@
-{% load custom_filters_product %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="zxx">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <meta name="robots" content="index, follow" />
-    <title>Mioca - Handmade Goods eCommerce HTML Template</title>
-    <meta name="description" content="Mioca - Handmade Goods eCommerce HTML Template" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Cart</title>
 
-    <!-- Add site Favicon -->
     <link rel="shortcut icon" href="{% static 'images/favicon/favicon.ico' %}" type="image/png">
-
-    <!-- vendor css (Icon Font) -->
     <link rel="stylesheet" href="{% static 'css/vendor/bootstrap.bundle.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/vendor/pe-icon-7-stroke.css' %}" />
     <link rel="stylesheet" href="{% static 'css/vendor/font.awesome.css' %}" />
-
-    <!-- plugins css (All Plugins Files) -->
     <link rel="stylesheet" href="{% static 'css/plugins/animate.css' %}" />
     <link rel="stylesheet" href="{% static 'css/plugins/swiper-bundle.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/plugins/jquery-ui.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/plugins/nice-select.css' %}" />
     <link rel="stylesheet" href="{% static 'css/plugins/venobox.css' %}" />
-
-    <!-- Use the minified version files listed below for better performance and remove the files listed above -->
-    <!-- <link rel="stylesheet" href="{% static 'css/vendor/vendor.min.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/plugins/plugins.min.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/style.min.css' %}"> -->
-
-    <!-- Main Style -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-
-
 </head>
 
 <body>
     {% include 'includes/header.html' %}
 
-    {% if cart.items.exists %}
-    <!-- Cart Area Start -->
-        <div class="cart-main-area pt-100px pb-100px">
-            <div class="container">
-                <h3 class="cart-page-title">Your cart items</h3>
-                <div class="row">
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-12">
-                        <form action="#">
-                            <div class="table-content table-responsive cart-table-content">
-                                <table>
-                                    <thead>
-                                        <tr>
-                                            <th>Image</th>
-                                            <th>Product Name</th>
-                                            <th>Until Price</th>
-                                            <th>Qty</th>
-                                            <th>Subtotal</th>
-                                            <th>Action</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        {% for item in cart.items.all %}
-                                            <tr>
-                                                <td class="product-thumbnail">
-                                                    <a href="#">
-                                                        <img class="img-responsive ml-15px"
-                                                             src="{% if item.product.photo %}{{ item.product.photo.url }}{% else %}{% static 'path/to/default/image.jpg' %}{% endif %}"
-                                                             alt="{{ item.product.name }}" />
-                                                    </a>
-                                                </td>
-                                                <td class="product-name">
-                                                    <a href="#">{{ item.product.name }}</a>
-                                                </td>
-                                                <td class="product-price-cart">
-                                                    <span class="amount">${{ item.product.final_price }}</span>
-                                                </td>
-                                                <td class="product-quantity">
-                                                    <div class="cart-plus-minus">
-                                                        <input class="cart-plus-minus-box" type="text" name="qtybutton"
-                                                               value="{{ item.quantity }}" />
-                                                    </div>
-                                                </td>
-                                                <td class="product-subtotal">
-                                                    ${{ item.quantity|floatformat:2|multiply:item.product.final_price }}
-                                                </td>
-                                               <td class="product-remove">
-                                                   <a href="{% url 'remove_from_cart' product.id %}" class="remove-from-cart">
-                                                       <i class="fa fa-times"></i>
-                                                   </a>
-                                               </td>
-                                            </tr>
-                                        {% endfor %}
-                                    </tbody>
-                                </table>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Cart Area End -->
+    <div class="cart-main-area pt-100px pb-100px">
+        <div class="container">
+            <h3 class="cart-page-title">Your cart items</h3>
 
-    {% else %}
-        <!-- Empty Cart Message -->
-        <div class="empty-cart-area pb-100px pt-100px">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="cart-heading">
-                            <h2>Your cart item</h2>
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+                {% endfor %}
+            {% endif %}
+
+            {% if cart %}
+                <div class="table-content table-responsive cart-table-content">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Image</th>
+                                <th>Product Name</th>
+                                <th>Unit Price</th>
+                                <th>Qty</th>
+                                <th>Subtotal</th>
+                                <th>Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for item in cart %}
+                                <tr>
+                                    <td class="product-thumbnail">
+                                        <a href="#">
+                                            <img class="img-responsive" src="{{ item.product.photo.url }}" alt="{{ item.product.name }}" />
+                                        </a>
+                                    </td>
+                                    <td class="product-name">
+                                        <a href="#">{{ item.product.name }}</a>
+                                    </td>
+                                    <td class="product-price-cart">
+                                        <span class="amount">${{ item.product.price }}</span>
+                                    </td>
+                                    <td class="product-quantity">
+                                        <span>{{ item.quantity }}</span>
+                                    </td>
+                                    <td class="product-subtotal">
+                                        ${{ item.total_price|floatformat:2 }}
+                                    </td>
+                                    <td class="product-remove">
+                                        <a href="{% url 'remove_from_cart' item.product.id %}">
+                                            <i class="fa fa-times"></i>
+                                        </a>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+                <div class="col-lg-4 col-md-12 mt-md-30px">
+                    <div class="grand-totall">
+                        <div class="title-wrap">
+                            <h4 class="cart-bottom-title section-bg-gary-cart">Cart Total</h4>
                         </div>
-                        <div class="empty-text-contant text-center">
-                            <i class="pe-7s-shopbag"></i>
-                            <h3>There are no more items in your cart</h3>
-                            <a class="empty-cart-btn" href="{% url 'shop' %}">
-                                <i class="fa fa-arrow-left"> </i> Continue shopping
-                            </a>
+                        <h5>Total products <span>${{ total_price|floatformat:2 }}</span></h5>
+
+                        <h4 class="grand-totall-title">Grand Total <span>${{ total_price|floatformat:2 }}</span></h4>
+
+                        <a href="{% url 'checkout' %}" class="proceed-to-checkout-btn">Proceed to Checkout</a>
+                    </div>
+                </div>
+            {% else %}
+                <div class="empty-cart-area pb-100px pt-100px">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="empty-text-contant text-center">
+                                    <i class="pe-7s-shopbag"></i>
+                                    <h3>There are no more items in your cart</h3>
+                                    <a class="empty-cart-btn" href="{% url 'shop' %}">
+                                        <i class="fa fa-arrow-left"> </i> Continue shopping
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            {% endif %}
         </div>
-        <!-- Empty Cart Area End -->
-    {% endif %}
+    </div>
 
     {% include 'includes/footer.html' %}
 
-    <!-- Global Vendor, plugins JS -->
-    <!-- Vendor JS -->
+    <!-- Подключаем необходимые скрипты -->
     <script src="{% static 'js/vendor/jquery-3.5.1.min.js' %}"></script>
     <script src="{% static 'js/vendor/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/vendor/jquery-migrate-3.3.0.min.js' %}"></script>
     <script src="{% static 'js/vendor/modernizr-3.11.2.min.js' %}"></script>
-
-    <!-- Plugins JS -->
     <script src="{% static 'js/plugins/swiper-bundle.min.js' %}"></script>
     <script src="{% static 'js/plugins/jquery-ui.min.js' %}"></script>
     <script src="{% static 'js/plugins/jquery.nice-select.min.js' %}"></script>
@@ -143,14 +121,6 @@
     <script src="{% static 'js/plugins/jquery.zoom.min.js' %}"></script>
     <script src="{% static 'js/plugins/venobox.min.js' %}"></script>
     <script src="{% static 'js/plugins/ajax-mail.js' %}"></script>
-
-    <!-- Use the minified version files listed below for better performance and remove the files listed above -->
-    <!-- <script src="{ static 'js/vendor/vendor.min.js' %}"></script>
-    <script src="{ static 'js/plugins/plugins.min.js' %}"></script> -->
-
-    <!-- Main Js -->
     <script src="{% static 'js/main.js' %}"></script>
-
 </body>
-
 </html>
