--- a/home/templates/blog.html
+++ b/home/templates/blog.html
@@ -6,35 +6,37 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="section-title text-center mb-30px">
-                    <h2 class="title">{{ blog_window.main_title }}</h2>
-                    <p class="sub-title">{{ blog_window.main_description }}</p>
+                    <h2 class="title">Latest Blog</h2>
+                    <p class="sub-title">Dive into our collection of articles and discover fascinating insights, tips, and stories about handmade products that will ignite your creativity and passion for crafting.</p>
                 </div>
             </div>
         </div>
         <!-- section title end -->
 
         <div class="row">
-            {% for blog in blog_window.blogs.all %}
+            {% for blog in blog_sections %}
             <div class="col-lg-4 col-md-6 mb-md-30px mb-lm-30px">
                 <div class="single-blog">
                     <div class="blog-image">
-                        <a href="{% url 'blog_single' blog.id %}"><img src="{{ blog.main_image.url }}"
-                                class="img-responsive w-100" alt=""></a>
+                        <a href="{% url 'blog_detail' blog.id %}">
+                            <img src="{{ blog.main_image.url }}" class="img-responsive w-100" alt="">
+                        </a>
                     </div>
                     <div class="blog-text">
                         <div class="blog-author-date">
                             <span> By,<a class="blog-author cercle-shape" href="#">{{ blog.by_user }}</a></span>
                             <span class="blog-date">{{ blog.date|date:"d F, Y" }}</span>
                         </div>
-                        <h5 class="blog-heading"><a class="blog-heading-link"
-                                href="{% url 'blog_single' blog.id %}">{{ blog.title }}</a>
+                        <h5 class="blog-heading">
+                            <a class="blog-heading-link" href="{% url 'blog_detail' blog.id %}">{{ blog.title }}</a>
                         </h5>
-                        <a href="{% url 'blog_single' blog.id %}" class="btn btn-primary blog-btn"> Read More</a>
+                        <a href="{% url 'blog_detail' blog.id %}" class="btn btn-primary blog-btn"> Read More</a>
                     </div>
                 </div>
             </div>
+            {% empty %}
+                <p>No blogs available.</p>
             {% endfor %}
-            <!-- End single blog -->
         </div>
     </div>
 </div>
