--- a/home/templates/product.html
+++ b/home/templates/product.html
@@ -7,7 +7,7 @@
             <div class="col-12">
                 <div class="section-title text-center mb-60px">
                     <h2 class="title">Popular Categories</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod incididunt ut labore et dolore magna aliqua.</p>
+                    <p>Find one that suits you best</p>
                 </div>
                 <!-- Tab Start -->
                 <div class="tab-slider swiper-container slider-nav-style-1 small-nav">
@@ -39,18 +39,18 @@
                     {% for category in categories %}
                     <div class="tab-pane fade {% if forloop.first %}show active{% endif %}" id="tab-{{ category.slug }}" role="tabpanel" aria-labelledby="tab-{{ category.slug }}">
                         <div class="row">
-                            {% for product in category.products.all %}
+                            {% for product in category %}
                             {% if product.is_visible %}
                             <div class="col-lg-4 col-xl-3 col-md-6 col-sm-6 col-xs-6 mb-30px">
                                 <!-- Single Product -->
                                 <div class="product">
                                     <div class="thumb">
-                                        <a href="{% url 'single_product' product.id %}" class="image">
-                                            <img src="{{ product.photo.url }}" alt="{{ product.name }}" />
+                                        <a href="{% url 'product_detail' product.id %}" class="image">
+                                            <img src="{{ product.photo }}" alt="{{ product.name }}" />
                                         </a>
                                         <span class="badges">
                                             {% if product.discount_percentage %}
-                                            <span class="sale">{{ product.discount_percentage }}%</span>
+                                            <span class="sale">{{ product.discount_percentage|floatformat:0 }}%</span>
                                             {% endif %}
                                         </span>
                                         <div class="actions">
@@ -64,7 +64,7 @@
                                     </div>
                                     <div class="content">
                                         <h5 class="title">
-                                            <a href="{% url 'single_product' product.id %}">{{ product.name }}</a>
+                                            <a href="{% url 'product_detail' product.id %}">{{ product.name }}</a>
                                         </h5>
                                         <span class="price">
                                             <span class="new">${{ product.final_price|floatformat:2 }}</span>
@@ -74,12 +74,12 @@
                                         </span>
                                         <span class="ratings">
                                             <span class="rating-wrap">
-                                                <span class="star" style="width: {{ product.average_rating|floatformat:0 }}%"></span>
+                                                <span class="star" style="width: {{ product.average_rating_percent }}%"></span>
                                             </span>
                                             <span class="rating-num">({{ product.reviews.count }} Reviews)</span>
                                         </span>
                                     </div>
-                                    <button title="Add To Cart" class="add-to-cart" data-product-id="{{ product.id }}">Add To Cart</button>
+                                        <a href="{% url 'add_to_cart' product.id %}" class="add-to-cart" title="Add To Cart">Add To Cart</a>
                                 </div>
                             </div>
                             {% endif %}
