--- a/home/templates/slider.html
+++ b/home/templates/slider.html
@@ -5,7 +5,7 @@
         <!-- Hero slider Active -->
         <div class="swiper-wrapper">
             {% for product in discounted_products|slice:":3" %}
-            <div class="hero-slide-item slider-height swiper-slide d-flex bg-color1" data-bg-image="{% static 'images/slider-image/slider-bg-1.jpg' %}">
+            <div class="hero-slide-item slider-height swiper-slide d-flex bg-color1" data-bg-image="{{ slider.background_image.url }}">
                 <div class="container align-self-center">
                     <div class="row">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 align-self-center sm-center-view">
