--- a/info_pages/templates/faq.html
+++ b/info_pages/templates/faq.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="robots" content="index, follow" />
-    <title>Mioca - Handmade Goods eCommerce HTML Template</title>
+    <title>FAQ</title>
     <meta name="description" content="Mioca - Handmade Goods eCommerce HTML Template" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
@@ -68,7 +68,7 @@
                     <div class="checkout-wrapper">
                         <div class="inner-descripe" data-aos="fade-up" data-aos-delay="200">
                             <h4 class="title">Below are frequently asked questions, you may find the answer for yourself</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id erat sagittis, faucibus metus malesuada, eleifend turpis. Mauris semper augue id nisl aliquet, a porta lectus mattis. Nulla at tortor augue. In eget enim diam. Donec gravida tortor sem, ac fermentum nibh rutrum sit amet. Nulla convallis mauris vitae congue consequat. Donec interdum nunc purus, vitae vulputate arcu fringilla quis. Vivamus iaculis euismod dui.</p>
+                            <p>At Mioca, we are dedicated to ensuring your satisfaction with every purchase. Your happiness is our top priority, and we strive to provide quality handcrafted products that meet your needs. If you have any questions or concerns, please don’t hesitate to reach out. We’re here to help!</p>
                         </div>
                         <div id="faq" class="panel-group">
                             {% for faq in faqs %}
