--- a/product/templates/shop.html
+++ b/product/templates/shop.html
@@ -1,3 +1,4 @@
+{% load custom_filters_product %}
 <!DOCTYPE html>
 <html lang="zxx">
 
@@ -5,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="robots" content="index, follow" />
-    <title>Mioca - Handmade Goods eCommerce HTML Template</title>
+    <title>Shop - Mioca</title>
     <meta name="description" content="Mioca - Handmade Goods eCommerce HTML Template" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
@@ -28,95 +29,110 @@
 
     <!-- Main Style -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-
 </head>
 
 <body>
+    {% include 'includes/header.html' %}
 
-   {% include 'includes/header.html' %}
+    <div class="container">
+        <div class="row">
+            <!-- Products Area Start -->
+            <div class="col-lg-9 col-md-12">
+                <div class="shop-product-wrap grid-view row mb-30">
+                    {% for product in products %}
+                    <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 mb-30px" data-aos="fade-up" data-aos-delay="200">
+                        <div class="product">
+                            <div class="thumb">
+                                <a href="{% url 'product_detail' product.id %}" class="image">
+                                    <img src="{{ product.photo }}" alt="{{ product.name }}" />
+                                    <img class="hover-image" src="{{ product.photo }}" alt="{{ product.name }}" />
+                                </a>
+                                {% if product.discount_price %}
+                                <span class="badges">
+                                    <span class="sale">-{{ product.discount_percentage|floatformat:0 }}%</span>
+                                </span>
+                                {% endif %}
 
-    <!-- Sidebar Area Start -->
-    <div class="col-lg-3 col-md-12">
-        <div class="shop-sidebar-wrap">
-            <div class="sidebar-widget">
-                <h4 class="sidebar-title">Categories</h4>
-                <div class="sidebar-widget-category">
-                    <ul>
-                        <li><a href="?category=all" class="{% if selected_category_slug == 'all' %}selected{% endif %}">
-                            <i class="fa fa-angle-right"></i> All</a></li>
-                        {% for category in categories %}
-                        <li><a href="?category={{ category.slug }}" class="{% if selected_category_slug == category.slug %}selected{% endif %}">
-                            <i class="fa fa-angle-right"></i> {{ category.name }}
-                            <span>({{ category.visible_product_count }})</span> </a></li>
-                        {% endfor %}
-                    </ul>
+                                <!-- Actions -->
+                                <div class="actions">
+                                    <a href="{% url 'add_to_wishlist' product.id %}" class="action wishlist" title="Wishlist"><i class="pe-7s-like"></i></a>
+                                    <a href="{% url 'add_to_compare' product.id %}" class="action compare" title="Compare"><i class="pe-7s-refresh-2"></i></a>
+                                </div>
+                            </div>
+
+                            <!-- Product Content -->
+                            <div class="content">
+                                <span class="ratings">
+                                    <span class="rating-wrap">
+                                        <span class="star" style="width: {{ product.average_rating_percent }}%"></span>
+                                    </span>
+                                    <span class="rating-num d-none">({{ product.reviews_count }} Review{{ product.reviews_count|pluralize }})</span>
+                                </span>
+                                <h5 class="title"><a href="{% url 'product_detail' product.id %}">{{ product.name }}</a></h5>
+                                <span class="price">
+                                    <span class="new">${{ product.final_price }}</span>
+                                    {% if product.discount_price %}
+                                    <span class="old">${{ product.price }}</span>
+                                    {% endif %}
+                                </span>
+                            </div>
+                            <a href="{% url 'add_to_cart' product.id %}" class="add-to-cart" title="Add To Cart">Add To Cart</a>
+                        </div>
+                    </div>
+                    {% empty %}
+                    <p>No products found matching the criteria.</p>
+                    {% endfor %}
                 </div>
             </div>
-            <div class="sidebar-widget mt-8">
-                <h4 class="sidebar-title">Price Filter</h4>
-                <form method="GET" action="">
-                    <div class="price-filter">
-                        <div class="price-slider-amount">
-                            <label for="min_price">Min Price:</label>
-                            <input type="number" id="min_price" name="min_price" value="{{ min_price }}" min="0" class="form-control mb-2">
-                            <label for="max_price">Max Price:</label>
-                            <input type="number" id="max_price" name="max_price" value="{{ max_price }}" min="0" class="form-control mb-2">
-                        </div>
-                        <button type="submit" class="btn btn-primary mt-2">Filter</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-    
-    <!-- Products Area Start -->
-    <div class="col-lg-9 col-md-12">
-        <div class="shop-product-wrap grid-view row mb-30">
-            {% for product in products %}
-            <div class="col-lg-4 col-md-6 col-sm-6">
-                <div class="product-item">
-                    <div class="product-thumb">
-                        <a href="#"><img src="{{ product.photo.url }}" alt="{{ product.name }}"></a>
-                    </div>
-                    <div class="product-content">
-                        <h4><a href="#">{{ product.name }}</a></h4>
-                        <div class="price">
-                            <span>${{ product.final_price }}</span>
-                            {% if product.discount_price %}
-                            <span class="old-price">${{ product.price }}</span>
-                            {% endif %}
-                        </div>
-                        <div class="product-rating">
-                            <span>Rating: {{ product.average_rating|floatformat:1 }} / 5</span>
+            <!-- Products Area End -->
+
+            <!-- Sidebar Area Start -->
+            <div class="col-lg-3 col-md-12">
+                <div class="shop-sidebar-wrap">
+                    <div class="sidebar-widget">
+                        <h4 class="sidebar-title">Categories</h4>
+                        <div class="sidebar-widget-category">
+                            <ul>
+                                <li><a href="?category=all" class="{% if selected_category_slug == 'all' %}selected{% endif %}">
+                                    <i class="fa fa-angle-right"></i> All</a></li>
+                                {% for category in categories %}
+                                <li><a href="?category={{ category.slug }}" class="{% if selected_category_slug == category.slug %}selected{% endif %}">
+                                    <i class="fa fa-angle-right"></i> {{ category.name }}
+                                    <span>({{ category.visible_product_count }})</span></a></li>
+                                {% endfor %}
+                            </ul>
                         </div>
                     </div>
-                    <div class="actions">
-                        <a href="{% url 'add_to_wishlist' product.id %}" class="action wishlist" title="Wishlist"><i class="pe-7s-like"></i></a>
-                        <a href="{% url 'add_to_compare' product.id %}" class="action compare" title="Compare"><i class="pe-7s-refresh-2"></i></a>
+                    <div class="sidebar-widget mt-8">
+                        <h4 class="sidebar-title">Price Filter</h4>
+                        <form method="GET" action="">
+                            <div class="price-filter">
+                                <div class="price-slider-amount">
+                                    <label for="min_price">Min Price:</label>
+                                    <input type="number" id="min_price" name="min_price" value="{{ min_price }}" min="0" class="form-control mb-2">
+                                    <label for="max_price">Max Price:</label>
+                                    <input type="number" id="max_price" name="max_price" value="{{ max_price }}" min="0" class="form-control mb-2">
+                                </div>
+                                <button type="submit" class="btn btn-primary mt-2">Filter</button>
+                            </div>
+                        </form>
                     </div>
-                    <button title="Add To Cart" class="add-to-cart" data-product-id="{{ product.id }}">Add To Cart</button>
                 </div>
             </div>
-            {% empty %}
-            <p>No products found matching the criteria.</p>
-            {% endfor %}
+            <!-- Sidebar Area End -->
         </div>
     </div>
-    <!-- Products Area End -->
 
-
-{% include 'includes/footer.html' %}
-
+    {% include 'includes/footer.html' %}
 
     <!-- Global Vendor, plugins JS -->
-
     <!-- Vendor JS -->
     <script src="{% static 'js/vendor/jquery-3.5.1.min.js' %}"></script>
     <script src="{% static 'js/vendor/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/vendor/jquery-migrate-3.3.0.min.js' %}"></script>
     <script src="{% static 'js/vendor/modernizr-3.11.2.min.js' %}"></script>
 
-    <!--Plugins JS-->
+    <!-- Plugins JS -->
     <script src="{% static 'js/plugins/swiper-bundle.min.js' %}"></script>
     <script src="{% static 'js/plugins/jquery-ui.min.js' %}"></script>
     <script src="{% static 'js/plugins/jquery.nice-select.min.js' %}"></script>
