--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -5,35 +5,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="robots" content="index, follow" />
-    <title>Mioca - Handmade Goods eCommerce HTML Template</title>
+    <title>Wishlist</title>
     <meta name="description" content="Mioca - Handmade Goods eCommerce HTML Template" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-
     <!-- Add site Favicon -->
     <link rel="shortcut icon" href="{% static 'images/favicon/favicon.ico' %}" type="image/png">
-
     <!-- vendor css (Icon Font) -->
     <link rel="stylesheet" href="{% static 'css/vendor/bootstrap.bundle.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/vendor/pe-icon-7-stroke.css' %}" />
     <link rel="stylesheet" href="{% static 'css/vendor/font.awesome.css' %}" />
-
     <!-- plugins css (All Plugins Files) -->
     <link rel="stylesheet" href="{% static 'css/plugins/animate.css' %}" />
     <link rel="stylesheet" href="{% static 'css/plugins/swiper-bundle.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/plugins/jquery-ui.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/plugins/nice-select.css' %}" />
     <link rel="stylesheet" href="{% static 'css/plugins/venobox.css' %}" />
-
     <!-- Main Style -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-
-
 </head>
 
 <body>
-
-
     {% include 'includes/header.html' %}
 
     <!-- Wishlist Area Start -->
@@ -49,33 +41,35 @@
                                     <tr>
                                         <th>Image</th>
                                         <th>Product Name</th>
-                                        <th>Until Price</th>
-                                        <th>Qty</th>
-                                        <th>Subtotal</th>
+                                        <th>Price</th>
                                         <th>Add To Cart</th>
+                                        <th>Remove</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    {% for item in wishlist.items.all %}
+                                    {% for item in wishlist_items %}
                                         <tr>
                                             <td class="product-thumbnail">
-                                                <a href="{% url 'product_detail' item.product.id %}"><img class="img-responsive ml-15px" src="{{ item.product.photo.url }}" alt="{{ item.product.name }}" /></a>
+                                                <a href="{% url 'product_detail' item.product.id %}">
+                                                    <img class="img-responsive ml-15px" src="{{ item.product.photo.url }}" alt="{{ item.product.name }}" />
+                                                </a>
                                             </td>
-                                            <td class="product-name"><a href="{% url 'product_detail' item.product.id %}">{{ item.product.name }}</a></td>
-                                            <td class="product-price-cart"><span class="amount">${{ item.product.final_price }}</span></td>
-                                            <td class="product-quantity">
-                                                <div class="cart-plus-minus">
-                                                    <input class="cart-plus-minus-box" type="text" name="qtybutton" value="1" />
-                                                </div>
+                                            <td class="product-name">
+                                                <a href="{% url 'product_detail' item.product.id %}">{{ item.product.name }}</a>
                                             </td>
-                                            <td class="product-subtotal">${{ item.product.final_price }}</td>
+                                            <td class="product-price-cart">
+                                                <span class="amount">${{ item.product.final_price }}</span>
+                                            </td>
                                             <td class="product-wishlist-cart">
-                                                <a href="{% url 'add_to_cart' product.id %}" class="action">
+                                                <a href="{% url 'add_to_cart' item.product.id %}" class="action">Add to Cart</a>
+                                            </td>
+                                            <td class="product-wishlist-cart">
+                                                <a href="{% url 'remove_from_wishlist' item.product.id %}" class="action">Remove</a>
                                             </td>
                                         </tr>
                                     {% empty %}
                                         <tr>
-                                            <td colspan="6" style="text-align: center;">Your wishlist is empty.</td>
+                                            <td colspan="5" style="text-align: center;">Your wishlist is empty.</td>
                                         </tr>
                                     {% endfor %}
                                 </tbody>
@@ -88,18 +82,13 @@
     </div>
     <!-- Wishlist Area End -->
 
-
     {% include 'includes/footer.html' %}
 
     <!-- Global Vendor, plugins JS -->
-
-
     <!-- Vendor JS -->
     <script src="{% static 'js/vendor/jquery-3.5.1.min.js' %}"></script>
     <script src="{% static 'js/vendor/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/vendor/jquery-migrate-3.3.0.min.js' %}"></script>
-    <script src="{% static 'js/vendor/modernizr-3.11.2.min.js' %}"></script>
-
     <!-- Plugins JS -->
     <script src="{% static 'js/plugins/swiper-bundle.min.js' %}"></script>
     <script src="{% static 'js/plugins/jquery-ui.min.js' %}"></script>
@@ -109,10 +98,8 @@
     <script src="{% static 'js/plugins/jquery.zoom.min.js' %}"></script>
     <script src="{% static 'js/plugins/venobox.min.js' %}"></script>
     <script src="{% static 'js/plugins/ajax-mail.js' %}"></script>
-
     <!-- Main Js -->
     <script src="{% static 'js/main.js' %}"></script>
 
 </body>
-
 </html>
